src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__time__cast_time_to_interval.snap
---
source: src/expr/src/scalar/func/impls/time.rs
expression: "#[sqlfunc(\n    sqlname = \"time_to_interval\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastIntervalToTime)\n)]\nfn cast_time_to_interval(t: NaiveTime) -> Interval {\n    let micros: i64 = Interval::convert_date_time_unit(\n            DateTimeField::Second,\n            DateTimeField::Microseconds,\n            i64::from(t.num_seconds_from_midnight()),\n        )\n        .unwrap()\n        + i64::from(t.nanosecond()) / i64::from(Interval::NANOSECOND_PER_MICROSECOND);\n    Interval::new(0, 0, micros)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastTimeToInterval;
impl crate::func::EagerUnaryFunc for CastTimeToInterval {
    type Input<'a> = NaiveTime;
    type Output<'a> = Interval;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_time_to_interval(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastIntervalToTime)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastTimeToInterval {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("time_to_interval")
    }
}
fn cast_time_to_interval(t: NaiveTime) -> Interval {
    let micros: i64 = Interval::convert_date_time_unit(
            DateTimeField::Second,
            DateTimeField::Microseconds,
            i64::from(t.num_seconds_from_midnight()),
        )
        .unwrap()
        + i64::from(t.nanosecond()) / i64::from(Interval::NANOSECOND_PER_MICROSECOND);
    Interval::new(0, 0, micros)
}
