src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__time__cast_time_to_string.snap
---
source: src/expr/src/scalar/func/impls/time.rs
expression: "#[sqlfunc(\n    sqlname = \"time_to_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToTime)\n)]\nfn cast_time_to_string(a: NaiveTime) -> String {\n    let mut buf = String::new();\n    strconv::format_time(&mut buf, a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastTimeToString;
impl crate::func::EagerUnaryFunc for CastTimeToString {
    type Input<'a> = NaiveTime;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_time_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToTime)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastTimeToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("time_to_text")
    }
}
fn cast_time_to_string(a: NaiveTime) -> String {
    let mut buf = String::new();
    strconv::format_time(&mut buf, a);
    buf
}
